--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "family-finance-frontend",
+  "name": "pangcah-accounting-frontend",
   "version": "1.0.0",
-  "description": "Family Finance Management System Frontend",
+  "description": "Pangcah Accounting System Frontend",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,29 +11,34 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "axios": "^1.6.2",
     "@tanstack/react-query": "^5.17.1",
-    "zustand": "^4.4.7",
+    "@types/d3": "^7.4.3",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0",
+    "d3": "^7.8.5",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
-    "d3": "^7.8.5",
-    "@types/d3": "^7.4.3",
-    "socket.io-client": "^4.7.4"
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
+    "socket.io-client": "^4.7.4",
+    "tailwindcss": "^3.4.17",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.5.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
