--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@types/d3": "^7.4.3",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "cloudinary-core": "^2.14.0",
+    "cloudinary-react": "^1.8.1",
     "d3": "^7.8.5",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
